version 0.8.0 - currently working on
- [#2640] Fix: Hidden subparts caused some missing fields in the list view.
- [#2511] Cleaned up the copy/pasted stuff from oelib/seminars
- [#2513] Updated copyright lines to new mail address
- [#2510] Updated copyright lines to 2009
- [#1843] Refactoring: Added new detailView class
- [#2509] Change: Changed extension key to "bzdstaffdirectory"
- [#1923] Feature: Add stdWrap properties to the "tasks" field
- [#2445] Fix: Replaced all calls to deprecated methods from oelib - now compatible with oelib >=0.5.0
- [#2382] Fix: PHP error when loading oelib template helper due to camel-case filename

version 0.7.0 - released 2008-11-24
- [#2349] Change: Enabled setting of labels for whole template (thanks to Olaf Schumann)
- [#2351] Fix: Recursive flag not taken into account when "Ignore group selection" active (Thanks to Olaf Schumann)
- [#90] Feature: Use oelib for templating stuff
- [#2270] Fix: Compatibility with TYPO3 4.3
- [#244] Feature: Add locations as relations
- [#2038] Fix: Changed links to detail view to contain cHash
- [#1746] Fix: Removed localized team/person names from the corresponding selectors in the BE form
- [#1853] Fix: Bug with relations when edited from the team record
- [#1640] Refactoring: Added person class
- [#1641] Refactoring: Added team class
- [#1830] Feature: Changed page title to person's name in single view (SEO)
- [#1642] Feature: Added base for unit testing

version 0.6.0 - released 2008-04-17
- [#1282] Feature: Remove links to the detail view
- [#1644] Change: Removed the requirement for bidirectional extension
- [#1732] Feature: Added field for XING Profile link
- [#1741] Fix: Deleted team records with relations caused wrong output in pi1
- [#1013] Change: List view now respects the startinpoint
- [#833] Fix: Pop-Ups not working due to missing person-UID
- [#1014] Fix: Grouped teamlist was not alphabetically ordered
- [#1080] Change: Made the opinion field an RTE field