@@ -1,4 +1,5 @@
 version 0.8.0 - currently working on
+- [#2756] Change: Allow location records on regular pages
 - [#2640] Fix: Hidden subparts caused some missing fields in the list view.
 - [#2511] Cleaned up the copy/pasted stuff from oelib/seminars
 - [#2513] Updated copyright lines to new mail address
